--- a/SendMessageWatchToPhone2/wear/src/main/res/layout/activity_main_activity_wear.xml
+++ b/SendMessageWatchToPhone2/wear/src/main/res/layout/activity_main_activity_wear.xml
@@ -1,15 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content"  android:layout_width="wrap_content">
-
+<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content"  android:layout_width="wrap_content">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="92dp"
         android:text="start"
         android:id="@+id/btnStart" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="95dp"
         android:text="stop"
         android:id="@+id/btnStop" />
+</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="gyroscope: 0"
+        android:id="@+id/GyroText" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"></LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="accelerometer:0"
+        android:id="@+id/AccelText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="step counter:0"
+        android:id="@+id/StepText" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="status: not started"
+        android:id="@+id/resultText" />
+
 </LinearLayout>
